--- a/lhwz.tex
+++ b/lhwz.tex
@@ -223,8 +223,10 @@ The range of $beta$-radiation is much bigger, that is to say a few meters in air
 
  \subsection{Counter Tube \label{CT}}
  
- The counter tube used in this experiment is a "Methan-Durchflusszähler". Inside a cylinder used as a cathode there is a counting wire out of molybdenum as anode. The cylinder is filled with methane. By applying a high voltage an electric field is induced between the counting wire and the cylinder jacket. When the radiation ionizes molecules the electrons move to the anode and the positive ions move to the cathode. The hereby generated current is transformed into a voltage signal by an exchange feedback capacitor and a pre-amplifier.
+ The counter tube used in this experiment is a "Methan-Durchflusszähler"(see figure \ref{Zählrohr} ).  Inside a cylinder used as a cathode there is a counting wire out of molybdenum as anode. The cylinder is filled with methane. By applying a high voltage an electric field is induced between the counting wire and the cylinder jacket. When the radiation ionizes molecules the electrons move to the anode and the positive ions move to the cathode. The hereby generated current is transformed into a voltage signal by an exchange feedback capacitor and a pre-amplifier.
  Since the methane is getting ionized it constantly needs to be changed to ensure constant counting properties. \textsuperscript{\cite{staat}} \textsuperscript{\cite{Creutz}}\\
+ 
+ \gra[0.85]{Zaehlrohr}{Functioning of the Counting Tube \cite{staat} \label{Zählrohr}}
  
  The samples are directly put into the counter tube because the radiation has a very small range. It decays in a solid angle $\Omega=2\pi$ into the counter tube. The counter tube is used as a proportional counter tube. Contrary to the ionization chamber which only collects the primary created charges, the charges are amplified by the methane. This amplification is proportional to the applied voltage.
  
